--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -27,7 +27,7 @@
 
 <script type="text/javascript">
 	const canvas = document.getElementById("screen");
-	const ctx = canvas.getContext("2d", { alpha: false });
+	const ctx = canvas.getContext("2d");
 	
 	canvas.width = 320;
 	canvas.height = 240;
