--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -83,6 +83,7 @@
 		Input.mouseDown = false;
 	});
 	
+	ctx.strokeStyle = "#000000";
 	function render() {
 		ctx.fillStyle = "#ffffff";
 		ctx.fillRect(0, 0, canvas.width, canvas.height);
