--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -90,7 +90,7 @@
 		ctx.beginPath();
 		for (let y = 0; y <= 24; y++) {
 			ctx.moveTo(0, y * 10);
-			ctx.lineTo(canvas.height, y * 10);
+			ctx.lineTo(canvas.width, y * 10);
 		}
 		for (let x = 0; x <= 32; x++) {
 			ctx.moveTo(x * 10, 0);
