--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -113,7 +113,7 @@
 			}
 		}
 	}
-	window.requestAnimationFrame(render);
+	render();
 	
 	function update() {
 		if (Input.mouseDown) {
@@ -125,7 +125,7 @@
 		window.requestAnimationFrame(update);
 	}
 	
-	window.requestAnimationFrame(update);
+	update();
 </script>
 
 </html>
