--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -73,7 +73,7 @@
 	});
 	
 	canvas.addEventListener("mousedown", () => {
-		console.log(Input.mouseX, Input.mouseY, clamp(~~(Input.mouseX / 10), 0, 31)clamp(~~(Input.mouseY / 10), 0, 23));
+		console.log(Input.mouseX, Input.mouseY, clamp(~~(Input.mouseX / 10), 0, 31), clamp(~~(Input.mouseY / 10), 0, 23));
 		Input.mouseDown = true;
 	});
 	
