--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -102,6 +102,7 @@
 		}
 		ctx.stroke();
 		ctx.closePath();
+		console.log(grid);
 		for (let y = 0; y < 32; y++) {
 			for (let x = 0; x < 24; x++) {
 				if (grid[y][x] === "#") {
