--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -102,9 +102,9 @@
 		}
 		ctx.stroke();
 		ctx.closePath();
-		console.log(grid);
 		for (let y = 0; y < 32; y++) {
 			for (let x = 0; x < 24; x++) {
+				console.log(x, y, grid[y][x]);
 				if (grid[y][x] === "#") {
 					ctx.fillStyle = "#000000";
 					ctx.fillRect(x * 10, y * 10, 10, 10);
