--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -102,8 +102,8 @@
 		}
 		ctx.stroke();
 		ctx.closePath();
-		for (let y = 0; y < 32; y++) {
-			for (let x = 0; x < 24; x++) {
+		for (let y = 0; y < 24; y++) {
+			for (let x = 0; x < 32; x++) {
 				console.log(x, y, grid[y][x]);
 				if (grid[y][x] === "#") {
 					ctx.fillStyle = "#000000";
@@ -118,7 +118,7 @@
 			}
 		}
 	}
-	render();
+	window.requestAnimationFrame(render);
 	
 	function update() {
 		if (Input.mouseDown) {
@@ -130,7 +130,7 @@
 		window.requestAnimationFrame(update);
 	}
 	
-	update();
+	window.requestAnimationFrame(update);
 </script>
 
 </html>
