--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -15,7 +15,7 @@
 	<nav>
 		<button id="reset">Reset</button>
 		<label>&nbsp;&nbsp;&nbsp;Tool:&nbsp;</label>
-		<select id="tool" value="Solid Wall">
+		<select id="tool" selected="Solid Wall">
 			<option value="Player Spawn">Player Spawn</option>
 			<option value="Level Finish">Level Finish</option>
 			<option value="Solid Wall">Solid Wall</option>
