--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -16,9 +16,10 @@
 		<button id="reset">Reset</button>
 		<label>&nbsp;&nbsp;&nbsp;Tool:&nbsp;</label>
 		<select id="tool" selected="Solid Wall">
+			<option value="Air">Air</option>
+			<option value="Solid Wall" selected>Solid Wall</option>
 			<option value="Player Spawn">Player Spawn</option>
 			<option value="Level Finish">Level Finish</option>
-			<option value="Solid Wall" selected>Solid Wall</option>
 		</select>
 	</nav>
 	<br>
@@ -54,6 +55,15 @@
 	
 	canvas.addEventListener("mouseup", () => {
 		if (tool !== "#") {
+			if (tool !== " ") {
+				for (let y = 0; y < 24; y++) {
+					for (let x = 0; x < 32; x++) {
+						if (grid[y][x] === tool) {
+							grid[y][x] = " ";
+						}
+					}
+				}
+			}
 			grid[~~(Input.mouseY / 10)][~~(Input.mouseX / 10)] = tool;
 		}
 		Input.mouseDown = false;
@@ -69,14 +79,17 @@
 	
 	document.getElementById("tool").addEventListener("input", (e) => {
 		switch ((e || window.event).target.value) {
+			case "Air":
+				tool = " ";
+				break;
+			case "Solid Wall":
+				tool = "#";
+				break;
 			case "Player Spawn":
 				tool = "@";
 				break;
 			case "Level Finish":
 				tool = "*";
-				break;
-			case "Solid Wall":
-				tool = "#";
 				break;
 			default:
 				alert("An unsupported block type was selected...");
