--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -33,6 +33,18 @@
 	canvas.width = 320;
 	canvas.height = 240;
 	
+	canvas.imageSmoothingEnabled = false;
+	canvas.mozImageSmoothingEnabled = false;
+	canvas.webkitImageSmoothingEnabled = false;
+	canvas.msImageSmoothingEnabled = false;
+	
+	window.onresize = function() {
+		canvas.imageSmoothingEnabled = false;
+		canvas.mozImageSmoothingEnabled = false;
+		canvas.webkitImageSmoothingEnabled = false;
+		canvas.msImageSmoothingEnabled = false;
+	};
+	
 	const Input = {};
 	
 	let tool = "#", grid = [];
