--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -53,6 +53,13 @@
 		for (let y = 0; y < 24; y++) {
 			grid.push(row.slice());
 		}
+		for (let y = 0; y < 24; y++) {
+			for (let x = 0; x < 32; x++) {
+				if (y === 0 || y === 24 || x === 0 || x === 31) {
+					grid[y][x] = "#";
+				}
+			}
+		}
 		grid[1][1] = "*@";
 		grid[22][30] = "*";
 	}
