--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -14,7 +14,7 @@
 	<h1>TI-Nspire Programs - Maze Escape Level Editor <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
 	<nav>
 		<button id="reset">Reset</button>
-		<label>&nbsp;&nbsp;&nbsp;Tool:&nbsp;</label>
+		<label for="tool">&nbsp;&nbsp;&nbsp;Tool:&nbsp;</label>
 		<select id="tool" selected="Solid Wall">
 			<option value="Air">Air</option>
 			<option value="Solid Wall" selected>Solid Wall</option>
