--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -60,7 +60,7 @@
 				}
 			}
 		}
-		grid[1][1] = "*@";
+		grid[1][1] = "@";
 		grid[22][30] = "*";
 	}
 	
@@ -101,7 +101,7 @@
 				}
 			}
 		}
-		grid[1][1] = "*@";
+		grid[1][1] = "@";
 		grid[22][30] = "*";
 	});
 	
