--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		</div>
 		<p>A simple maths tool.</p>
 		<p><strong>Tools:</strong></p>
-		<li>
-			<ul>Surd Simplifier - shows the simplification of input surd, step by step.</ul>
-		</li>
+		<ul>
+			<li>Surd Simplifier - shows the simplification of input surd, step by step.</li>
+		</ul>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
 	<br>
