--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		<div class="program-screenshots">
 			<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Menu.png"></img>
 			<img alt="How Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/How.png"></img>
-			<img alt="Gamplay Screenshot 1" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay #1.png"></img>
-			<img alt="Gameplay Screenshot 2" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay #2.png"></img>
+			<img alt="Gamplay Screenshot 1" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 1.png"></img>
+			<img alt="Gameplay Screenshot 2" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 2.png"></img>
 			<img alt="Game Over Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Game Over.png"></img>
 		</div>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
