--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<ul>
 			<li>Surd Simplifier - shows the simplification of input surd, step by step.</li>
 		</ul>
-		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
+		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maths Tool.zip"><button>Download</button></a>
 	</div>
 	<br>
 	<br>
