--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p>A simple maths tool.</p>
 		<p><strong>Tools:</strong></p>
 		<ul>
-			<li>Surd Simplifier - shows the simplification of input surd, step by step.</li>
+			<li>Surd Simplifier - simplifies surds, displaying each step.</li>
 		</ul>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maths Tool.zip"><button>Download</button></a>
 	</div>
