--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<nav>
-		<h1>TI-Nspire Programs - Maze Escape Level Editor <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img> TI-Nspire Programs - Maze Escape Level Editor</h1>
 	</nav>
 	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
 		<h2>Note:</h2>
