--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -205,5 +205,6 @@
 	
 	window.requestAnimationFrame(update);
 </script>
+<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/scripts.mjs"></script>
 
 </html>
