--- a/Maze-Escape-Level-Editor/Published-Levels/index.html
+++ b/Maze-Escape-Level-Editor/Published-Levels/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/maze-escape-level-editor.css" />
+	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/Published-Levels/scripts.mjs" defer></script>
 </head>
 
 <body>
