--- a/Maze-Escape-Level-Editor/Published-Levels/index.html
+++ b/Maze-Escape-Level-Editor/Published-Levels/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img> TI-Nspire Programs - Maze Escape Level Editor</h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img> TI-Nspire Programs - Maze Escape Level Editor  <a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor"><button>Level Editor</button></a></h1>
 	</nav>
 </body>
 
