--- a/Maze-Escape-Level-Editor/Published-Levels/index.html
+++ b/Maze-Escape-Level-Editor/Published-Levels/index.html
@@ -6,8 +6,28 @@
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs - Maze Escape Published Levels</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
-	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/maze-escape-level-editor.css" />
+	<style>
+		nav h1 button {
+			background-color: skyblue;
+			border: solid 2px;
+			border-color: deepskyblue;
+			border-radius: 8px;
+			padding: 7px;
+			padding-top: 10px;
+			padding-bottom: 10px;
+		}
+		
+		nav h1 button:hover {
+			background-color: deepskyblue;
+			border-color: dodgerblue;
+			cursor: pointer;
+		}
+		
+		nav h1 button:active {
+			background-color: dodgerblue;
+			border-color: blue;
+		}
+	</style>
 	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/Published-Levels/scripts.mjs" defer></script>
 </head>
 
