--- a/Maze-Escape-Level-Editor/Published-Levels/index.html
+++ b/Maze-Escape-Level-Editor/Published-Levels/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs - Maze Escape Published Levels</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
+	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/maze-escape-level-editor.css" />
 	<style>
 		nav h1 button {
 			background-color: skyblue;
