--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -40,7 +40,7 @@
 	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
 		<h2>Note:</h2>
 		<p>A level must have one (no more and no less) player spawn, and a level must have at least one level finish. It must be possible to navigate from the player spawn to a level finish.</p>
-		<p>Once your level is completed, click "Generate Level Data" (which will automatically copy the level data), and paste it into an email <a href="mailto:mattdestroyerpro@gmail.com?subject=TI-Nspire Maze Escape Level">here</a>. You can also email a nickname which will be added to the credits if your level is used.</p>
+		<p>Once your level is completed, click "Generate Level Data" which will publish your level. Your level can then be viewed on the <a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/Published-Levels/">Published Levels</a> page. If your level is used, the name/pseudonym/nickname you publish your level under will be used for credit.</p>
 	</div>
 	<br>
 	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
