--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 		<ul>
 			<li>Surd Simplifier - simplifies surds, displaying each step.</li>
 		</ul>
+		<p><strong>Tested on:</strong></p>
+		<ul>
+			<li>TI-Nspire CAS CX</li>
+		</ul>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maths Tool.zip"><button>Download</button></a>
 	</div>
 	<br>
@@ -43,6 +47,10 @@
 			<img alt="Win Screen Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Win Screen.png"></img>
 		</div>
 		<p>(v1.0.2 only contains 8 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
+		<p><strong>Tested on:</strong></p>
+		<ul>
+			<li>TI-Nspire CAS CX</li>
+		</ul>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/TI-Nspire-Programs/Maze-Escape-Level-Editor"><button>Level Editor</button></a>
 	</div>
 	<br>
@@ -56,6 +64,10 @@
 			<img alt="Gameplay Screenshot 2" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 2.png"></img>
 			<img alt="Game Over Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Game Over.png"></img>
 		</div>
+		<p><strong>Tested on:</strong></p>
+		<ul>
+			<li>TI-Nspire CAS CX</li>
+		</ul>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
