--- a/index.html
+++ b/index.html
@@ -18,58 +18,60 @@
 		<p>Instructions on usage can be found in the zipped folder that is downloaded when you click any of the download buttons.</p>
 	</div>
 	<br>
-	<div class="program-container">
-		<h2>Maths Tool v1.0.0</h2>
-		<div class="program-screenshots">
-			<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maths Tool/Menu.png"></img>
-			<img alt="Surd Simplifier Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maths Tool/Surd Simplifier.png"></img>
-			<img alt="Surd Simplifier Example Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maths Tool/Surd Simplifier Example.png"></img>
+	<div id="programs">
+		<div class="program-container">
+			<h2>Maths Tool v1.0.0</h2>
+			<div class="program-screenshots">
+				<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maths Tool/Menu.png"></img>
+				<img alt="Surd Simplifier Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maths Tool/Surd Simplifier.png"></img>
+				<img alt="Surd Simplifier Example Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maths Tool/Surd Simplifier Example.png"></img>
+			</div>
+			<p>A simple maths tool.</p>
+			<p><strong>Tools:</strong></p>
+			<ul>
+				<li>Surd Simplifier - simplifies surds, displaying each step.</li>
+			</ul>
+			<p><strong>Tested on:</strong></p>
+			<ul>
+				<li>TI-Nspire CAS CX</li>
+			</ul>
+			<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maths Tool.zip"><button>Download</button></a>
 		</div>
-		<p>A simple maths tool.</p>
-		<p><strong>Tools:</strong></p>
-		<ul>
-			<li>Surd Simplifier - simplifies surds, displaying each step.</li>
-		</ul>
-		<p><strong>Tested on:</strong></p>
-		<ul>
-			<li>TI-Nspire CAS CX</li>
-		</ul>
-		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maths Tool.zip"><button>Download</button></a>
-	</div>
-	<br>
-	<br>
-	<div class="program-container">
-		<h2>Maze Escape v1.0.2</h2>
-		<div class="program-screenshots">
-			<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Menu.png"></img>
-			<img alt="How Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/How.png"></img>
-			<img alt="Gamplay Gif" width="214px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Gameplay.gif"></img>
-			<img alt="Win Screen Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Win Screen.png"></img>
+		<br>
+		<br>
+		<div class="program-container">
+			<h2>Maze Escape v1.0.2</h2>
+			<div class="program-screenshots">
+				<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Menu.png"></img>
+				<img alt="How Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/How.png"></img>
+				<img alt="Gamplay Gif" width="214px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Gameplay.gif"></img>
+				<img alt="Win Screen Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Maze Escape/Win Screen.png"></img>
+			</div>
+			<p>(v1.0.2 only contains 8 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
+			<p><strong>Tested on:</strong></p>
+			<ul>
+				<li>TI-Nspire CAS CX</li>
+			</ul>
+			<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/TI-Nspire-Programs/Maze-Escape-Level-Editor"><button>Level Editor</button></a>
 		</div>
-		<p>(v1.0.2 only contains 8 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
-		<p><strong>Tested on:</strong></p>
-		<ul>
-			<li>TI-Nspire CAS CX</li>
-		</ul>
-		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/TI-Nspire-Programs/Maze-Escape-Level-Editor"><button>Level Editor</button></a>
-	</div>
-	<br>
-	<br>
-	<div class="program-container">
-		<h2>Snake v1.0.1</h2>
-		<div class="program-screenshots">
-			<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Menu.png"></img>
-			<img alt="How Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/How.png"></img>
-			<img alt="Gamplay Screenshot 1" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 1.png"></img>
-			<img alt="Gameplay Screenshot 2" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 2.png"></img>
-			<img alt="Game Over Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Game Over.png"></img>
+		<br>
+		<br>
+		<div class="program-container">
+			<h2>Snake v1.0.1</h2>
+			<div class="program-screenshots">
+				<img alt="Menu Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Menu.png"></img>
+				<img alt="How Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/How.png"></img>
+				<img alt="Gamplay Screenshot 1" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 1.png"></img>
+				<img alt="Gameplay Screenshot 2" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Gameplay 2.png"></img>
+				<img alt="Game Over Screenshot" width="160px" height="120px" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Screenshots/Snake/Game Over.png"></img>
+			</div>
+			<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
+			<p><strong>Tested on:</strong></p>
+			<ul>
+				<li>TI-Nspire CAS CX</li>
+			</ul>
+			<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 		</div>
-		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
-		<p><strong>Tested on:</strong></p>
-		<ul>
-			<li>TI-Nspire CAS CX</li>
-		</ul>
-		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
 	<br>
 	<div class="footer">
