--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -7,6 +7,7 @@
 	<title>TI-Nspire Programs - Upload Program</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Upload-Program/scripts.mjs" defer></script>
 </head>
 
 <body>
