--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -14,6 +14,21 @@
 	<nav>
 		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Upload Program</img></h1>
 	</nav>
+	<br>
+	<div>
+		<h2>Upload Program</h2>
+		<label for"title">Title:</label>
+		<input id="title" placeholder="Title" />
+		<label for="description">Description:</label>
+		<textarea id="description" placeholder="Description of your program..."></textarea>
+		<br>
+		<label>Upload .zip file:</label>
+		<input id="file" type="file" />
+		<label>Password:</label>
+		<input id="password" />
+		<label>Confirm Password:</label>
+		<input id="confirm-password" />
+	</div>
 </body>
 
 </html>
