--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -29,7 +29,7 @@
 		<br>
 		<label>Upload .zip file:</label>
 		<br>
-		<input id="file" type="file" />
+		<input id="file" type="file" accept=".zip,.tns" />
 		<br>
 		<br>
 		<label>Password:</label>
