--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -27,7 +27,7 @@
 		<textarea id="description" placeholder="Description of your program..."></textarea>
 		<br>
 		<br>
-		<label>Upload .zip file:</label>
+		<label>Upload .zip or .tns file:</label>
 		<br>
 		<input id="file" type="file" accept=".zip,.tns" />
 		<br>
