--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -34,12 +34,12 @@
 		<br>
 		<label>Password:</label>
 		<br>
-		<input id="password" />
+		<input id="password" type="password" />
 		<br>
 		<br>
 		<label>Confirm Password:</label>
 		<br>
-		<input id="confirm-password" />
+		<input id="confirm-password" type="password" />
 	</div>
 </body>
 
