--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -40,6 +40,9 @@
 		<label>Confirm Password:</label>
 		<br>
 		<input id="confirm-password" type="password" />
+		<br>
+		<br>
+		<button id="upload">Upload</button>
 	</div>
 </body>
 
