--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -17,9 +17,14 @@
 	<br>
 	<div>
 		<h2>Upload Program</h2>
-		<label for"title">Title:</label>
+		<label for="title">Title:</label>
 		<br>
 		<input id="title" placeholder="Title" />
+		<br>
+		<br>
+		<label for="version">Version</label>
+		<br>
+		<input id="version" placeholder="v1.0.0" />
 		<br>
 		<br>
 		<label for="description">Description:</label>
@@ -27,17 +32,17 @@
 		<textarea id="description" placeholder="Description of your program..."></textarea>
 		<br>
 		<br>
-		<label>Upload .zip or .tns file:</label>
+		<label for="file">Upload .zip or .tns file:</label>
 		<br>
 		<input id="file" type="file" accept=".zip,.tns" />
 		<br>
 		<br>
-		<label>Password:</label>
+		<label for="password">Password:</label>
 		<br>
 		<input id="password" type="password" />
 		<br>
 		<br>
-		<label>Confirm Password:</label>
+		<label for="confirm-password">Confirm Password:</label>
 		<br>
 		<input id="confirm-password" type="password" />
 		<br>
