--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -27,6 +27,11 @@
 		<input id="version" placeholder="v1.0.0" />
 		<br>
 		<br>
+		<label for="author">Author</label>
+		<br>
+		<input id="author" placeholder="v1.0.0" />
+		<br>
+		<br>
 		<label for="description">Description:</label>
 		<br>
 		<textarea id="description" placeholder="Description of your program..."></textarea>
