--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -29,7 +29,7 @@
 		<br>
 		<label for="author">Author</label>
 		<br>
-		<input id="author" placeholder="v1.0.0" />
+		<input id="author" placeholder="Name/Nickname/Pseudonym" />
 		<br>
 		<br>
 		<label for="description">Description:</label>
