--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -22,12 +22,12 @@
 		<input id="title" placeholder="Title" />
 		<br>
 		<br>
-		<label for="version">Version</label>
+		<label for="version">Version:</label>
 		<br>
 		<input id="version" placeholder="v1.0.0" />
 		<br>
 		<br>
-		<label for="author">Author</label>
+		<label for="author">Author:</label>
 		<br>
 		<input id="author" placeholder="Name/Nickname/Pseudonym" />
 		<br>
