--- a/Maze-Escape-Level-Editor/Published-Levels/index.html
+++ b/Maze-Escape-Level-Editor/Published-Levels/index.html
@@ -8,34 +8,12 @@
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
 	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/maze-escape-level-editor.css" />
-	<style>
-		nav h1 button {
-			background-color: skyblue;
-			border: solid 2px;
-			border-color: deepskyblue;
-			border-radius: 8px;
-			padding: 7px;
-			padding-top: 10px;
-			padding-bottom: 10px;
-		}
-		
-		nav h1 button:hover {
-			background-color: deepskyblue;
-			border-color: dodgerblue;
-			cursor: pointer;
-		}
-		
-		nav h1 button:active {
-			background-color: dodgerblue;
-			border-color: blue;
-		}
-	</style>
 	<script type="module" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/Published-Levels/scripts.mjs" defer></script>
 </head>
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img> TI-Nspire Programs - Maze Escape Level Editor&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor"><button>Level Editor</button></a></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img> TI-Nspire Programs - Maze Escape Published Levels&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor"><button>Level Editor</button></a></h1>
 	</nav>
 	<div id="levels"></div>
 </body>
