--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/"><button>Maze Escape Level Editor</button></a></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Upload-Program/"><button>Upload Your Program</button></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://matt-destroyer.github.io/TI-Nspire-Programs/Maze-Escape-Level-Editor/"><button>Maze Escape Level Editor</button></a></h1>
 	</nav>
 	<br>
 	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
