--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -15,7 +15,7 @@
 		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Upload Program</img></h1>
 	</nav>
 	<br>
-	<div>
+	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
 		<h2>Upload Program</h2>
 		<label for="title">Title:</label>
 		<br>
