--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<nav>
-		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Upload Program</img></h1>
+		<h1><img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"> TI-Nspire Programs - Upload Program</img>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/"><button>Home</button></a></h1>
 	</nav>
 	<br>
 	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
