--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -42,6 +42,14 @@
 		<input id="file" type="file" accept=".zip,.tns" />
 		<br>
 		<br>
+		<!--
+		<div id="screenshots">
+			<input id="screenshot-1" type="file" accept="image/*" /><button id="delete-1">Delete</button>
+		</div>
+		<button i="addScreenshot"></button>
+		<br>
+		<br>
+		-->
 		<label for="password">Password:</label>
 		<br>
 		<input id="password" type="password" />
