--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -43,9 +43,7 @@
 		<br>
 		<br>
 		<!--
-		<div id="screenshots">
-			<input id="screenshot-1" type="file" accept="image/*" /><button id="delete-1">Delete</button>
-		</div>
+		<div id="screenshots"></div>
 		<button i="addScreenshot"></button>
 		<br>
 		<br>
