--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -43,7 +43,7 @@
 		<br>
 		<br>
 		<div id="screenshots"></div>
-		<button i="addScreenshot"></button>
+		<button id="addScreenshot">Add Screenshot</button>
 		<br>
 		<br>
 		<label for="password">Password:</label>
