--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -17,6 +17,33 @@
 	<br>
 	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
 		<h2>Create Account:</h2>
+		<br>
+		<label for="firstname">Firstname:</label>
+		<br>
+		<input id="firstname" />
+		<br>
+		<br>
+		<label for="lastname">Lastname::</label>
+		<br>
+		<input id="lastname" />
+		<br>
+		<br>
+		<label for="username">Username:</label>
+		<br>
+		<input id="username" />
+		<br>
+		<br>
+		<label for="password">Password:</label>
+		<br>
+		<input id="password" type="password" />
+		<br>
+		<br>
+		<label for="confirm-password">Confirm Password</label>
+		<br>
+		<input id="confirm-password" />
+		<br>
+		<br>
+		<button id="create-account">Create Account</button>
 	</div>
 </body>
 
