--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -23,7 +23,7 @@
 		<input id="firstname" />
 		<br>
 		<br>
-		<label for="lastname">Lastname::</label>
+		<label for="lastname">Lastname:</label>
 		<br>
 		<input id="lastname" />
 		<br>
