--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -38,7 +38,7 @@
 		<input id="password" type="password" />
 		<br>
 		<br>
-		<label for="confirm-password">Confirm Password</label>
+		<label for="confirm-password">Confirm Password:</label>
 		<br>
 		<input id="confirm-password" />
 		<br>
