--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -20,17 +20,17 @@
 		<br>
 		<label for="firstname">Firstname:</label>
 		<br>
-		<input id="firstname" />
+		<input id="firstname" placeholder="Firstname" />
 		<br>
 		<br>
 		<label for="lastname">Lastname:</label>
 		<br>
-		<input id="lastname" />
+		<input id="lastname" placeholder="Lastname" />
 		<br>
 		<br>
 		<label for="username">Username:</label>
 		<br>
-		<input id="username" />
+		<input id="username" placeholder="Username" />
 		<br>
 		<br>
 		<label for="password">Password:</label>
