--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -43,6 +43,9 @@
 		<input id="confirm-password" />
 		<br>
 		<br>
+		<p id="error-message" class="error" hidden></p>
+		<br>
+		<br>
 		<button id="create-account">Create Account</button>
 	</div>
 </body>
