--- a/Create-Account/index.html
+++ b/Create-Account/index.html
@@ -40,7 +40,7 @@
 		<br>
 		<label for="confirm-password">Confirm Password:</label>
 		<br>
-		<input id="confirm-password" />
+		<input id="confirm-password" type="password" />
 		<br>
 		<br>
 		<p id="error-message" class="error" hidden></p>
