--- a/Login/index.html
+++ b/Login/index.html
@@ -28,6 +28,9 @@
 		<input id="password" type="password" />
 		<br>
 		<br>
+		<p id="error-message" class="error"></p>
+		<br>
+		<br>
 		<button id="login">Login</button>
 	</div>
 </body>
