--- a/Login/index.html
+++ b/Login/index.html
@@ -28,7 +28,7 @@
 		<input id="password" type="password" />
 		<br>
 		<br>
-		<p id="error-message" class="error"></p>
+		<p id="error-message" class="error" hidden></p>
 		<br>
 		<br>
 		<button id="login">Login</button>
