--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -35,6 +35,8 @@
 			<button id="generate">Publish Level</button>
 		</nav>
 		<br>
+		<p id="error-message" class="error" hidden></p>
+		<br>
 		<br>
 		<canvas id="screen"></canvas>
 	</div>
