--- a/Upload-Program/index.html
+++ b/Upload-Program/index.html
@@ -43,6 +43,9 @@
 		-->
 		<br>
 		<br>
+		<p id="error-message" class="error" hidden></p>
+		<br>
+		<br>
 		<button id="upload">Upload</button>
 	</div>
 </body>
